traefik-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
spec:
  selector:
    app: traefik
  ports:
  - name: http
    port: 8083
    targetPort: 8083
