traefik-ingress.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: traefik
  externalIPs:
  - <Internal IP>
