traefik-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: <DomainName>
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: 8083
